kubernetes/apps/base/agents/agents/app/assistant-raj/egress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stpetersburg-vllm
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: IfNotPresent
    tailscale.com/tailnet-fqdn: stpetersburg-vllm.keiretsu.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
    - name: http
      port: 80
      protocol: TCP
